--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "font-awesome": "^4.7.0",
+        "laravel-echo": "^1.15.0",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
+        "pusher-js": "^8.0.1",
         "tailwindcss": "^3.2.1",
         "vite": "^3.0.0",
         "vue": "^3.2.41"
